--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["calldatas", "remappings", "Timelock"]
+  "cSpell.words": [
+    "calldatas",
+    "gitmodules",
+    "keccak",
+    "remappings",
+    "scopefile",
+    "Timelock"
+  ]
 }
